--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,8 +56,8 @@
                         </div>
                     </div>
                 </div>
-                <video class="hero__video" src="../public/assets/showreel.mp4" muted autoplay loop></video>
-                <video class="hero__video second__showreel" src="../public/assets/showreel__mobile.mp4" muted autoplay
+                <video playsinline class="hero__video" src="../public/assets/showreel.mp4" muted autoplay loop></video>
+                <video playsinline class="hero__video second__showreel" src="../public/assets/showreel__mobile.mp4" muted autoplay
                     loop></video>
                 <div class="overlay"></div>
             </div>
