--- a/views/services.ejs
+++ b/views/services.ejs
@@ -109,12 +109,12 @@
                         </div>
                     </div>
                     <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2">
-                        <div data-aos-duration="1000" data-aos="fade-left" id="" class="col">
+                        <div data-aos-duration="1000" data-aos="fade-left" class="col">
                             <img src="../public/assets/edu.jpg" alt="edu" class="img-fluid">
                             <h1 class="video__title">Обучающий ролик</h1>
                             <div class="overlay"></div>
-                            <iframe loading="lazy" id="" class="video"
-                                src="" title="YouTube video player"
+                            <iframe loading="lazy" class="video"
+                                title="YouTube video player"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
